--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "date-fns": "^3.1.0"
+    "date-fns": "^3.1.0",
+    "express": "^4.18.2"
   }
 }
