--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "date-fns": "^3.1.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "yup": "^1.3.3"
   }
 }
